# ng_module_issue_repro

./: BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
src/: BUILD.bazel  app.component.ts
